sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: Boolean does not take parameters
  while (!isSorted()) {
                  ^